--- a/client/index.html
+++ b/client/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
+
+<link rel="stylesheet" href="styles.css">
+
 
   <body>
     <!-- Scripts may be placed anywhere on a page. But FYI, they block rendering of elements
@@ -9,6 +13,7 @@
     <script src="bower_components/underscore/underscore.js"></script>
     <script src="bower_components/backbone/backbone.js"></script>
     <script src="env/config.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
 
 
     <script src="data/data.js"></script>
